--- a/libs/shared/styles/src/lib/base.scss
+++ b/libs/shared/styles/src/lib/base.scss
@@ -30,3 +30,14 @@ a {
     color: $pink-dark;
   }
 }
+
+/* visually hidden class for visually impaired users using voice-over */
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
